# rust-llm-proxy

./: .env  .env.example  .gitignore  Cargo.toml  README.MD
migration/: Cargo.toml
migration/src/: lib.rs  m20251016_092534_create_users_table.rs  m20251016_173133_create_api_keys_table.rs  m20251026_060001_service_table.rs  m20251026_070000_add_model_to_service_table.rs  m20251102_194252_create_jobs_table.rs  m20251120_000001_add_settings_to_service_table.rs
postman/: Api Key.postman_collection.json  Job.postman_collection.json  Service.postman_collection.json  Users.postman_collection.json
src/: app.rs  lib.rs  main.rs  routes.rs
src/assets/: index-C9Z_wg3A.css  index-b_etn5OI.js
src/core/: app_error.rs  config.rs  form.rs  http.rs  mod.rs  response.rs  router.rs  state.rs
src/features/: mod.rs
src/features/home/: controller.rs
src/features/service/: constants.rs  mod.rs  routes.rs
src/features/service/builders/: job_form_builder.rs  job_payload_builder.rs  mod.rs
src/features/service/controller/: job_controller.rs  mod.rs  service_controller.rs
src/features/service/dto/: cached_job_snapshot.rs  chat_prompt.rs  job_chat_response.rs  job_controller_error.rs  job_execution_context.rs  mod.rs  provider_response.rs  service_settings.rs
src/features/service/model/: jobs.rs  mod.rs  prelude.rs  service.rs
src/features/service/models/: mod.rs
src/features/users/: mod.rs  routes.rs
src/middleware/: auth.rs  is_admin.rs  mod.rs
src/seed/: insert_admin.rs  mod.rs
src/utility/: mod.rs  state.rs  url.rs
templates/: index.html
(+38 files in other folders)
