[package]
name = "rust-llm-proxy"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Habibi-Dev"]

[profile.release]
opt-level = 3
lto = true
strip = true

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
axum = { version = "0.8.6" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
migration = { path = "migration" } # depends on your needs
anyhow = "1.0.100"
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
mime_guess = "2.0.5"
blake3 = "1.8.2"
rand = "0.9.2"
askama = "0.14.0"
validator = { version = "0.20.0", features = ["derive"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.24", features = ["json"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
